--- a/snakesAndLadders/snakesAndLadders/Base.lproj/Main.storyboard
+++ b/snakesAndLadders/snakesAndLadders/Base.lproj/Main.storyboard
@@ -18,8 +18,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OS0-Yf-3Hm">
-                                <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zpD-oO-G8z">
+                                <rect key="frame" x="220" y="521.5" width="138" height="87.000000000000057"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="138" id="2uy-4l-4ZG"/>
+                                    <constraint firstAttribute="height" constant="87" id="hAV-Vz-5Tn"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="button">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Roll Dice">
+                                            <attributes>
+                                                <color key="NSColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <font key="NSFont" size="24" name="GillSans-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="roll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0eW-pX-3pw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a7B-Ff-mW9">
+                                <rect key="frame" x="16" y="521.5" width="138" height="87.000000000000057"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="87" id="PVU-M9-ahJ"/>
+                                    <constraint firstAttribute="width" constant="138" id="Xi2-Tu-OFn"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="button">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Restart">
+                                            <attributes>
+                                                <color key="NSColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <font key="NSFont" size="24" name="GillSans-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="roll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1oW-Li-VRX"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4uO-66-gsh">
+                                <rect key="frame" x="161" y="575.5" width="51" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="17"/>
+                                <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="dice" translatesAutoresizingMaskIntoConstraints="NO" id="Ois-gW-9Tr">
+                                <rect key="frame" x="171" y="535.5" width="31" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Ois-gW-9Tr" secondAttribute="height" multiplier="1:1" id="9KE-IP-OH5"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Snakes and Ladders" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8v-6I-iQh">
+                                <rect key="frame" x="16" y="57" width="343" height="81.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="35"/>
+                                <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OS0-Yf-3Hm">
+                                <rect key="frame" x="37" y="183" width="300" height="300"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I5e-Fy-Dj2">
                                         <rect key="frame" x="270" y="270" width="30" height="30"/>
@@ -28,42 +90,27 @@
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="crown" translatesAutoresizingMaskIntoConstraints="NO" id="lKP-pv-gM7">
                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="grid" translatesAutoresizingMaskIntoConstraints="NO" id="pOK-ka-ACF">
+                                        <rect key="frame" x="-25" y="-25" width="350" height="350"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="BYo-Zp-vmh"/>
-                                    <constraint firstAttribute="width" constant="300" id="dOQ-a3-K1G"/>
+                                    <constraint firstAttribute="width" constant="300" id="irO-LS-Cbj"/>
+                                    <constraint firstAttribute="height" constant="300" id="swe-wG-gZT"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zpD-oO-G8z">
-                                <rect key="frame" x="155.5" y="513.5" width="64" height="64"/>
-                                <state key="normal" backgroundImage="dice"/>
-                                <connections>
-                                    <action selector="roll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0eW-pX-3pw"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dice: 0 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4uO-66-gsh">
-                                <rect key="frame" x="158.5" y="154" width="58" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="OS0-Yf-3Hm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2xE-GZ-XmR"/>
-                            <constraint firstItem="OS0-Yf-3Hm" firstAttribute="top" secondItem="4uO-66-gsh" secondAttribute="bottom" constant="8.5" id="86q-yc-76L"/>
-                            <constraint firstItem="4uO-66-gsh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZE0-tI-UCZ"/>
-                            <constraint firstItem="zpD-oO-G8z" firstAttribute="top" secondItem="OS0-Yf-3Hm" secondAttribute="bottom" constant="30" id="wKi-ih-li1"/>
-                            <constraint firstItem="OS0-Yf-3Hm" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xh9-LM-S9k"/>
-                            <constraint firstItem="zpD-oO-G8z" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yh9-H8-vBg"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="diceButton" destination="zpD-oO-G8z" id="L2y-yd-A4m"/>
                         <outlet property="diceResultLabel" destination="4uO-66-gsh" id="B45-PR-HeS"/>
@@ -77,7 +124,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="crown" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="button" width="668" height="206"/>
+        <image name="crown" width="183" height="183"/>
         <image name="dice" width="64" height="64"/>
+        <image name="grid" width="668" height="668"/>
     </resources>
 </document>
